--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="changes">
             <div class="adjust">
                 <span style="font-size:80%; color:rgb(255,0,0)">
-                    Highest : <span>0</span>
+                    Highest : <span id="h_scr">0</span>
                 </span>
                 <br>
                 <span>
                     Score : <span id="scr">0</span>
                 </span>
                 <br>
-                <span style="color:rgb(3, 71, 3)">
+                <span style="color:rgb(3, 71, 3)" id="notify">
                     Press Start !
                 </span>
             </div>
@@ -105,7 +105,7 @@
             </div>
             <div class="buttons">
                 <button onclick="start()">Start</button>
-                <button>Restart</button>
+                <button onclick="handleGameEnd()">Restart</button>
                 <button id="seti">Settings</button>
             </div>
         </div>
