--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="buttons">
-                <button onclick="start()">Start</button>
+                <button onclick="start()" id="start">Start</button>
                 <button onclick="handleGameEnd()">Restart</button>
                 <button id="seti">Settings</button>
             </div>
